--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ API_HASH=65b9f007d9d208b99519c52ce89d3a2a
 PHONE_NUMBER=+918002591484
 ADMIN_ID=8469993808
 CHANNEL_ID=-1003784917581
+MONGO_URI=mongodb+srv://sandip:9E9AISFqTfU3VI5i@cluster0.p8irtov.mongodb.net/telegramacceptold
